--- a/css/scopes/_scopes.article.scss
+++ b/css/scopes/_scopes.article.scss
@@ -231,7 +231,7 @@
     display: block;
     font-size: 0.85rem;
     line-height: 1.45;
-    overflow-y: scroll;
+    //overflow-y: scroll;
     border-radius: $global-radius;
 
     @media (min-width: 1000px) {
