--- a/css/settings/_settings.global.scss
+++ b/css/settings/_settings.global.scss
@@ -8,7 +8,7 @@
 $global-font-size: 16px;
 $global-line-height: 16px;
 
-$base-font-family: 'Heebo';
+$base-font-family: 'Rubik';
 $body-font: 'Merriweather', Arial;
 
 $base-font-weight: 400;
